<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_list_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_list_ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tv_list_name"
        app:layout_constraintStart_toEndOf="@+id/tv_list_ID"
        app:layout_constraintTop_toTopOf="@+id/tv_list_ID" />

    <TextView
        android:id="@+id/tv_list_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_list_address"
        app:layout_constraintStart_toStartOf="@+id/tv_list_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_name" />

    <TextView
        android:id="@+id/tv_list_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_list_tel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_list_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_address" />

    <TextView
        android:id="@+id/tv_list_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_list_birthday"
        app:layout_constraintBottom_toBottomOf="@+id/tv_list_tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_list_tel"
        app:layout_constraintTop_toTopOf="@+id/tv_list_tel" />
</androidx.constraintlayout.widget.ConstraintLayout>